insert new codes with modifies

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__/maps.cpython-313.pyc
 requirements.txt
 .streamlit/secrets.toml
 src/__pycache__/authenticator.cpython-313.pyc
+src/__pycache__/nearest_station.cpython-313.pyc
