--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ requirements.txt
 .streamlit/secrets.toml
 src/__pycache__/authenticator.cpython-313.pyc
 src/__pycache__/nearest_station.cpython-313.pyc
+CRX2RNX
+origin.ipynb
