--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-src/__pycache__/autenticador.cpython-313.pyc
-src/__pycache__/generate_date.cpython-313.pyc
-src/__pycache__/generate_files.cpython-313.pyc
-src/__pycache__/maps.cpython-313.pyc
-__pycache__/generate_date.cpython-313.pyc
-__pycache__/generate_files.cpython-313.pyc
-__pycache__/autenticador.cpython-313.pyc
-__pycache__/maps.cpython-313.pyc
-src/__pycache__/authenticator.cpython-313.pyc
-src/__pycache__/nearest_station.cpython-313.pyc
+.env
+*.pyc
+__pycache__/
